Properly list all coordinates in all environments